--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 			<ul class="nav navbar-nav">
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Manutenção <span class="caret"></span></a>
+					<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Manutenção <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="#">Auditoria</a></li>
 						<li><a href="#">Checklist</a></li>
@@ -48,11 +48,9 @@
 			</ul>
 		</div>
 	</nav>
-
-
-	<!-- <div class="container"> -->
-		<!-- ANGULAR DYNAMIC CONTENT -->
-		<div ui-view></div>
-	<!-- </div> -->
+	
+	<!-- ANGULAR DYNAMIC CONTENT -->
+	<div ui-view></div>
+	
 </body>
 </html>
